GNOME Bugzilla – Bug 726106
matroskademux: does not handle fps lower than 1
Last modified: 2014-03-12 08:09:03 UTC
Created attachment 271522 [details] [review] Suggested fix. When matroskademux is used with a file with an fps lower than 1 it asserts. The assert is caused by gst_duration_to_fraction calling gst_util_uint64_scale_int with a denominator of 0.
commit 2a362c6fb1dc4b734af57d060cd7d612b6237f91 Author: Per x Johansson <perxjoh@axis.com> Date: Tue Mar 11 14:56:30 2014 +0100 matroskademux: fix assert on fps lower than 1 Fixes assert caused by gst_duration_to_fraction calling gst_util_uint64_scale_int with a denominator of 0 when fps is less than 1. https://bugzilla.gnome.org/show_bug.cgi?id=726106